--- a/FormulaE.ipynb
+++ b/FormulaE.ipynb
@@ -448,7 +448,7 @@
     "    # Element-wise operations for arrays\n",
     "    t0 = +2.0 * (w * x + y * z)\n",
     "    t1 = +1.0 - 2.0 * (x * x + y * y)\n",
-    "    X = np.degrees(np.arctan2(t0, t1))  # Roll\n",
+    "    X = np.degrees(np.arctan2(t0, t1))  n",
     "\n",
     "    t2 = +2.0 * (w * y - z * x)\n",
     "    t2 = np.clip(t2, -1.0, 1.0)  # Clip to avoid domain errors\n",
@@ -460,13 +460,13 @@
     "\n",
     "    return X, Y, Z\n",
     "\n",
-    "# Example data from your dataset (replace these with your actual data)\n",
+    "\n",
     "orientation_x = np.array([0.1, 0.2, 0.3])\n",
     "orientation_y = np.array([0.1, 0.2, 0.3])\n",
     "orientation_z = np.array([0.1, 0.2, 0.3])\n",
     "orientation_w = np.array([1.0, 0.9, 0.8])\n",
     "\n",
-    "# Convert quaternion to Euler angles (yaw, pitch, roll)\n",
+    "n",
     "roll, pitch, yaw = quaternion_to_euler(orientation_x, orientation_y, orientation_z, orientation_w)\n",
     "\n",
     "print(\"Roll:\", roll)\n",
@@ -554,7 +554,7 @@
     "# Ensure all arrays have the same length\n",
     "min_length = min(len(accel_x_data), len(accel_y_data), len(time), len(yaw))\n",
     "\n",
-    "# Slice the arrays to the minimum length\n",
+    "n",
     "accel_x_data = accel_x_data[:min_length]\n",
     "accel_y_data = accel_y_data[:min_length]\n",
     "time = time[:min_length]\n",
@@ -695,7 +695,7 @@
     "\n",
     "positions_w_x, positions_w_y = calculate_position_with_wheel(leftBack_w, rightBack_w, full_time_w_a, yaw_w)\n",
     "\n",
-    "# Print or plot the results\n",
+    "n",
     "print(positions_w_x, positions_w_y)"
    ]
   },
@@ -897,7 +897,7 @@
     "\n",
     "positions_w_s_x, positions_w_s_y = calculate_position_with_wheel(leftBack_w_s, rightBack_w_s, full_time_w_a_s, yaw_w_s)\n",
     "\n",
-    "# # Print or plot the results\n",
+    "n",
     "print(positions_w_s_x, positions_w_s_y)"
    ]
   },
@@ -1027,7 +1027,7 @@
     "kf2d = KF2D(initial_x=0, initial_y=0, initial_vx=0, initial_vy=0, accel_variance=1.0)\n",
     "\n",
     "# Define measurement variance for IMU and wheel data\n",
-    "meas_variance_imu = 0.1  # Tune this value based on the confidence in IMU data\n",
+    "meas_variance_imu = 0.1  # Tune this value the way you want, lower it is the better in this casen",
     "meas_variance_wheel = 0.05  # Tune this value based on the confidence in wheel data\n",
     "\n",
     "filtered_positions_x = []\n",
@@ -1035,7 +1035,7 @@
     "\n",
     "\n",
     "for i in range(len(matched_indices_s)):\n",
-    "    dt = full_time_s[matched_indices_s[i]] - full_time_s[matched_indices_s[i-1]] if i > 0 else 0.01  # Ensure small non-zero dt for first step\n",
+    "    dt = full_time_s[matched_indices_s[i]] - full_time_s[matched_indices_s[i-1]] if i > 0 else 0.01  \n",
     "    \n",
     "    # Kalman filter prediction step\n",
     "    kf2d.predict(dt)\n",
